@@ -11,6 +11,8 @@ x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low
     - Hide GSSAPI options on direct RDP connections. (Fixes: #478).
     - Search X-Server in /Applications/Utilities/XQuartz.app on Mac.
     - Wrong cmd line option throw error dialog if running not from terminal.
+    - Add command line option "close-disconnect", which make client close after
+      session is disconnected.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Apr 2014 18:30:25 +0200
 
